--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,8 @@
   position: -webkit-sticky; /* For macOS/iOS Safari */
   top: 0; /* Sets the sticky toolbar to be on top */
   z-index: 1000; /* Ensure that app's content doesn't overlap the toolbar */
-  box-shadow: black 0 0px 0 1px;
+  -webkit-box-shadow: 0px -1px 8px 5px rgba(0,0,0,0.78);
+  box-shadow: 0px -1px 8px 5px rgba(0,0,0,0.78);
 }
 
 mat-sidenav-container {
